resources/testcases_static_checks/tests/positive/isRpc/blockCheckNeedsConstantRemaping.rls
R(?X, !Z), P(!Z) | Q(?X) :- P(?X), Q(?Y) .
