resources/testcases_static_checks/tests/negative/isDmfc/reorderPizzaWithMoreDatalogRules.rls
NextOrder(?X, !Z), Pizza(!Z) | LastForToday(?X) :- Pizza(?X) .
A(?Y) :- NextOrder(?X, ?Y) .
B(?X) :- A(?X) .
LastForToday(?X) :- B(?X) .
C(?X) :- A(?X) .
A(?X) :- C(?X) .
